--- a/dropdown-sidebar/index.html
+++ b/dropdown-sidebar/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <title> Drop Down Sidebar Menu | CodingLab </title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Boxiocns CDN Link -->
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -118,11 +118,11 @@
       <li>
     <div class="profile-details">
       <div class="profile-content">
-        <img src="image/profile.jpg" alt="profileImg">
+        <img src="image/profile.png" alt="profileImg">
       </div>
       <div class="name-job">
-        <div class="profile_name">Prem Shahi</div>
-        <div class="job">Web Desginer</div>
+        <div class="profile_name">Jeremias Brizolla</div>
+        <div class="job">Full Stack Developer</div>
       </div>
       <i class='bx bx-log-out' ></i>
     </div>
@@ -136,7 +136,7 @@
     </div>
   </section>
 
-  <script src="script.js"></script>
+  <script src="./js/script.js"></script>
 
 </body>
 </html>
