create folder cards-hover-effects

--- a/navigation-menu-hover-animation/index.html
+++ b/navigation-menu-hover-animation/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8">
-    <title> All Navigation Menu Hover Animation | CodingLab </title>
+    <title> Navigation Menu Hover Animation </title>
     <link rel="stylesheet" href="./css/style.css">
    </head>
 <body>
