--- a/simple-portifolio/index.html
+++ b/simple-portifolio/index.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="UTF-8" />
-        <!---<title> Simple Website Design | CodingLab </title>--->
+        <title> Simple Website Design </title>
         <link rel="stylesheet" href="./css/style.css" />
         <link
             rel="stylesheet"
